--- a/server/scss/signup.scss
+++ b/server/scss/signup.scss
@@ -139,4 +139,10 @@ article.sign-up{
       }
     }
   }
+  @include mobile(){
+    .sign-up-container{
+      min-width: unset;
+      width: unset;
+    }
+  }
 }
