--- a/server/views/signup.ejs
+++ b/server/views/signup.ejs
@@ -14,7 +14,8 @@
     <title>Express To Match - Find love anonymously</title>
     <meta name="title" content="Express To Match - Find love anonymously" />
     <meta name="description" content ="Find love using Express To match, anonymously" />
-    <meta name="viewport" content="width=821, maximum-scale=1" />
+    <!--<meta name="viewport" content="width=821, maximum-scale=1" />-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
     <link href="/public/css/main.css" rel="stylesheet" type="text/css" />
