--- a/server/scss/signup.scss
+++ b/server/scss/signup.scss
@@ -39,6 +39,11 @@ article.sign-up{
         }
       }
     }
+    @include mobile(){
+      .header{
+        padding: 10px 20px;
+      }
+    }
     .content-local{
       padding: 20px;
       border-bottom: 1px solid $em-border-gray;
@@ -99,6 +104,11 @@ article.sign-up{
         }
       }
     }
+    @include mobile(){
+      .content-local{
+        padding: 10px 20px;
+      }
+    }
     .content-social{
       padding: 20px;
 
@@ -136,6 +146,11 @@ article.sign-up{
           padding-bottom: 13px;
           text-align: center;
         }
+      }
+    }
+    @include mobile(){
+      .content-social{
+        padding: 10px 20px;
       }
     }
   }
