--- a/server/views/privacy.ejs
+++ b/server/views/privacy.ejs
@@ -15,7 +15,7 @@
     <meta name="title" content="Express To Match - Find love anonymously" />
     <meta name="description" content ="Find love using Express To match, anonymously" />
     <!--<meta name="viewport" content="width=821, maximum-scale=1" />-->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
