--- a/server/views/partial/header.ejs
+++ b/server/views/partial/header.ejs
@@ -3,7 +3,7 @@
         <a href="/posts">
             <div class="app-logo">
                 <i class="fas fa-link"></i>
-                <span className="app-name">EXPRESS TO MATCH</span>
+                <span class="app-name">EXPRESS TO MATCH</span>
             </div>
         </a>
     </div>
