header alignment for logo and reset page css

--- a/server/scss/reset.scss
+++ b/server/scss/reset.scss
@@ -1,7 +1,7 @@
 article.reset-password{
   display: flex;
   justify-content: center;
-  flex: 1;
+  flex: 1 0 auto;
 
 
   .reset-password-container{
