--- a/client/src/styles/header.scss
+++ b/client/src/styles/header.scss
@@ -25,6 +25,8 @@
         color: $em-text-white;
         margin: 0 10px;
         font-weight: bold;
+        display: flex;
+        align-items: center;
 
         &:hover{
           color: $em-text-gray;
@@ -37,7 +39,7 @@
         }
         i{
           font-size: 1.5rem;
-          vertical-align: middle;
+          //vertical-align: middle;
         }
       }
     }
