Adding interests and making it private only to post author. Likes cannot be viewed, but only for popularity, count is shown.

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -15,6 +15,7 @@
 @import './createpost.scss';
 @import './contactus.scss';
 @import './postlikesmodal';
+@import './postinterestsmodal';
 @import './uploadphotomodal';
 @import './messages';
 
