--- a/client/src/styles/posts.scss
+++ b/client/src/styles/posts.scss
@@ -71,31 +71,32 @@
                 -webkit-box-shadow: 2px 2px 5px 2px $em-bg-gray-dark;
                 box-shadow: 2px 2px 5px 2px $em-bg-gray-dark;
                 outline: none;
+                background-color: $em-bg-gray-light;
 
                 .menu-item {
                   font-size: 11px;
                   white-space: nowrap;
                   overflow: hidden;
                   text-overflow: ellipsis;
-                  color: $em-bg-gray-dark;
+                  color: $em-text-gray;
                   cursor: pointer;
                   line-height: 20px;
                   font-weight: bold;
 
                   &:hover{
-                    background-color: $em-bg-gray-verylight;
+                    background-color: $em-bg-gray-dark;
                   }
                   &:focus{
                     outline: none;
                   }
                   &:active{
-                    background-color: $em-bg-gray-verylight;
+                    background-color: $em-bg-gray-dark;
                   }
                   .item-text{
                     padding: 0 10px;
                   }
                   i{
-                    zoom: 1.2;
+                    zoom: 1.4;
                     vertical-align: middle;
                   }
                 }
@@ -108,7 +109,7 @@
                   height: 0;
                   border-left: 5px solid transparent;  /* left arrow slant */
                   border-right: 5px solid transparent; /* right arrow slant */
-                  border-bottom: 5px solid #fff; /* bottom, add background color here */
+                  border-bottom: 5px solid $em-bg-gray-light; /* bottom, add background color here */
                   font-size: 0;
                   line-height: 0;
                 }
