Updated button name.

--- a/client/src/styles/profile.scss
+++ b/client/src/styles/profile.scss
@@ -36,7 +36,7 @@
         }
       }
     }
-    .express-interest{
+    .send-interest{
       align-self: flex-end;
       margin: 10px 0;
       background-color: #09a7f3;
