--- a/client/src/styles/comments.scss
+++ b/client/src/styles/comments.scss
@@ -13,6 +13,19 @@
     color: $em-text-gray-light;
   }
   .new-comment-container{
+    display: flex;
+    align-items: center;
+
+    .comment-photo{
+      align-self: center;
+      img{
+        height: 40px;
+        width: 40px;
+        border-radius: 50%;
+        margin-right: 10px;
+      }
+    }
+
     textarea.new-comment{
       height: 60px;
       width: 100%;
@@ -147,6 +160,18 @@
           color: $em-text-gray-light;
         }
         .new-reply-container{
+          display: flex;
+          align-items: center;
+
+          .reply-photo{
+            align-self: center;
+            img{
+              height: 32px;
+              width: 32px;
+              border-radius: 50%;
+              margin-right: 10px;
+            }
+          }
           textarea.new-reply{
             height: 46px;
             width: 100%;
