--- a/server/scss/main.scss
+++ b/server/scss/main.scss
@@ -75,5 +75,5 @@ select:-webkit-autofill:active,{
 .container{
   display: flex;
   flex-flow: column nowrap;
-  height: 100%;
+  min-height: 100%;
 }
