--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -42,7 +42,7 @@ body.noscroll{
     bottom: 0;
   }
 }
-body, input, textarea, select, header, article, section, aside, pre {
+body, input, textarea, select, header, article, section, aside, pre, button {
   line-height: 1.6;
   letter-spacing: 0.7px;
   font-size: 13px;
@@ -148,11 +148,11 @@ textarea {
 
 
 #app {
-  height: 100%;
+  min-height: 100%;
 
   .main-container{
     display: flex;
     flex-flow: column nowrap;
-    height: 100%;
+    min-height: 100%;
   }
 }
